src/app/module-viewer/ice/ice.component.sass
@import "src/app/common/sass/variables.sass"

$padding: 0;
$triangleSize: 10px;
$triangleColor: orange;

\:host
  display: block
  padding: 0 $padding
  width: 100%
  position: relative
  &:hover
    .add-comment
      display: inline-flex
    .has-comment
      display: none

  &.side-comment
    .add-comment
      top: -5px
      right: -1em

.add-comment
  display: none
  position: absolute
  right: $padding
  top: 0px
  color: orange

.has-comment
  position: absolute
  right: $padding
  top: 0px
  color: orange

.textbody
  margin: 0 auto;
  border: solid 2px #BFBFBF;
  background: white;
  outline: none;
  min-height: 2.2em

  &.has-error
    border-color: $red

  \::ng-deep
    > ul
      padding-left: 20px

  &[disabled="true"]
    &:before
      content: "";
      position: absolute;
      width: 100%;
      height: 100%;
      background: white;
      opacity: 0.4;
      top: 0;
      left: 0;

  &[contenteditable][placeholder]:empty:before
    content: attr(placeholder)
    color: #aaa

  &.showComment
    border-color: $triangleColor

.comment-wrapper
  padding: 20px
  background: white
  border-radius: 4px
  width: 300px
  position: absolute
  box-shadow: 0 3px 4px rgba(0,0,0,0.2)
  z-index: 1000
  top: 100%
  width: 100%

.comment-content

  margin-bottom: 10px;
  padding-bottom: 10px;
  display: flex;
  justify-content: space-between;

textarea
  margin: 10px 0;

.btn-wrapper
  text-align: right;
  button
    margin-left: 5px;

.matrix-selection
  display: inline-block

  span
    vertical-align: middle

  .remove-selection
    display: none

.allow-remove-selections
  .matrix-selection:hover
    .remove-selection
      cursor: pointer
      display: inline-block

      mat-icon
        height: 16px
        width: 16px
        vertical-align: middle
        line-height: 14px
        margin-left: -3px
        margin-right: 10px

.comment-list
  overflow-y: scroll
  height: auto
  max-height: 300px

